# slide_cancer_detection

./: .hgignore  CMakeLists.txt  FindOpenSlide.cmake  README.md
packingProblem/: README.md
segmentation/: CMakeLists.txt  README.md  edgedetection.h
segmentation/matlab.src/: kmeans_image_segmetnation.m  kmeans_image_segmetnation.m~  kmeansclustering.m
segmentation/src/: full_svs_segmentation.cpp  histogramSegmentation.cpp  histogramSmoothSegmentation.cpp  kmeansSeg.cpp  segmentation.cpp  segmentation.h  sgsmooth.c  sgsmooth.cpp  sgsmooth.h
svstotiff/: CMakeLists.txt
svstotiff/include/: svsconvert.cpp  svsconvert.h
svstotiff/src/: svsconverter.cpp  svstotiff.cpp  tiffexample.cpp
